# logiath

./: .travis.yml  CMakeLists.txt  README.md  codecov.yml
cmake/modules/: Util.cmake
doc/: CMakeLists.txt  doxygen.cfg.in
examples/: CMakeLists.txt  file_output.cpp  no_output.cpp  no_output_derived.cpp  util.hpp
examples/multi_use/: CMakeLists.txt  example.h  use1.cpp  use2.cpp
include/logiath/: config.hpp.in  logiath.hpp
unittests/: CMakeLists.txt  run_unit_tests.sh.in  test_logiath.cpp
utils/scripts/: build.sh  exports_clang.sh  exports_gcc.sh
utils/scripts/travis/: build-gtest-libcxx.sh
